client side added

--- a/EventManagment.API/appsettings.json
+++ b/EventManagment.API/appsettings.json
@@ -7,10 +7,16 @@
   },
   "AllowedHosts": "*",
   "AzureAd": {
-    "Instance": "https://[YOUR_ORG_NAME].b2clogin.com/",
-    "Domain": "[YOUR_ORG_NAME].onmicrosoft.com",
-    "TenantId": "[TenantId]",
-    "ClientId": "[ClientId]",
+    "Instance": "https://eventmanagementsolution.b2clogin.com/",
+    "Domain": "eventmanagementsolution.onmicrosoft.com",
+    "TenantId": "6141d573-15d5-4e62-a579-b6c30d0a8bd8",
+    "ClientId": "4cdbee84-c023-41df-a4a8-7472ed99fdb8",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": "",
+    "SignUpSignInPolicyId": "B2C_1_Sign_In_Up",
+    "SignedOutCallbackPath": "/signout/B2C_1_susi",
+    "ResetPasswordPolicyId": "b2c_1_reset",
+    "EditProfilePolicyId": "b2c_1_edit_profile",
     "EnablePiiLogging": true
   }
 }
