--- a/EventManagment.API/appsettings.json
+++ b/EventManagment.API/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "AzureAd": {
-    "Instance": "https://[YOU_APP_NAME].b2clogin.com/",
-    "Domain": "[YOUR_APP_NAME].onmicrosoft.com",
-    "TenantId": "[TenantId]",
-    "ClientId": "[ClientId]",
+    "Instance": "https://eventmanagementsolution.b2clogin.com/",
+    "Domain": "eventmanagementsolution.onmicrosoft.com",
+    "TenantId": "6141d573-15d5-4e62-a579-b6c30d0a8bd8",
+    "ClientId": "4cdbee84-c023-41df-a4a8-7472ed99fdb8",
     "CallbackPath": "/signin-oidc",
     "Scopes": "",
     "SignUpSignInPolicyId": "B2C_1_Sign_In_Up",
