--- a/EventManagment.Blazor/wwwroot/appsettings.json
+++ b/EventManagment.Blazor/wwwroot/appsettings.json
@@ -4,8 +4,8 @@
     "ClientId": "33333333-3333-3333-33333333333333333"
   },
   "AzureAd": {
-    "ClientId": "[ClientId]",
-    "Authority": "https://[YOUR_ID].b2clogin.com/[YOUR_ID].onmicrosoft.com/B2C_1_Sign_In_Up",
+    "ClientId": "8be0f88a-50cd-42c1-baf2-d7c72d2328a5",
+    "Authority": "https://eventmanagementsolution.b2clogin.com/eventmanagementsolution.onmicrosoft.com/B2C_1_Sign_In_Up",
     "ValidateAuthority": false
   }
 }
