--- a/EventManagment.API/appsettings.json
+++ b/EventManagment.API/appsettings.json
@@ -12,7 +12,7 @@
     "TenantId": "6141d573-15d5-4e62-a579-b6c30d0a8bd8",
     "ClientId": "4cdbee84-c023-41df-a4a8-7472ed99fdb8",
     "CallbackPath": "/signin-oidc",
-    "Scopes": "",
+    "Scopes": "Api.ReadWrite",
     "SignUpSignInPolicyId": "B2C_1_Sign_In_Up",
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
     "ResetPasswordPolicyId": "b2c_1_reset",
