--- a/EventManagment.Blazor/wwwroot/appsettings.json
+++ b/EventManagment.Blazor/wwwroot/appsettings.json
@@ -5,7 +5,9 @@
   },
   "AzureAd": {
     "ClientId": "8be0f88a-50cd-42c1-baf2-d7c72d2328a5",
+    "Scope": "https://eventmanagementsolution.onmicrosoft.com/4cdbee84-c023-41df-a4a8-7472ed99fdb8/Api.ReadWrite",
     "Authority": "https://eventmanagementsolution.b2clogin.com/eventmanagementsolution.onmicrosoft.com/B2C_1_Sign_In_Up",
     "ValidateAuthority": false
-  }
-}
+  },
+  "ApiUrl": "http://localhost:5240/"
+} 
