--- a/EventManagment.Blazor/EventManagment.Blazor.csproj
+++ b/EventManagment.Blazor/EventManagment.Blazor.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.7" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.7" />
     <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.http" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
