data base connection created

--- a/EventManagment.API/appsettings.json
+++ b/EventManagment.API/appsettings.json
@@ -18,5 +18,8 @@
     "ResetPasswordPolicyId": "b2c_1_reset",
     "EditProfilePolicyId": "b2c_1_edit_profile",
     "EnablePiiLogging": true
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\MSSQLSERVER01;Database=EventManagmentSystemDb;TrustServerCertificate=True;Integrated Security=true"
   }
 }
