AddUnitOfWork added to extinsion

--- a/EventManagment.API/EventManagment.API.csproj
+++ b/EventManagment.API/EventManagment.API.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventManagment.Models\EventManagment.Models.csproj" />
+    <ProjectReference Include="..\EventManagment.Repositories\EventManagment.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
